# lambdacomp

./: .gitignore  .stylish-haskell.yaml  CHANGELOG.md  LICENSE  README.md  cabal.project  lambdacomp.cabal
.devcontainer/: devcontainer.json
.github/workflows/: haskell.yaml  haskell.yml  latex.yaml
data/: runtime.h
docs/: .gitignore
docs/presentations/2025_JUN_10/: slides.tex
examples/: Constant.lc  Fib10.lc  Fib100.lc  HugeRec.lc  IfFun.lc  InfiniteRec.lc  MultiTopOrder.lc  PartialApp.lc  PrintEvalOrder.lc  PrintOrder.lc  ReusingLocalPartialApp.lc  ReusingPartialApp.lc  SimpleApp.lc  SimpleIf.lc  Sin.lc
exe/: Main.hs
src/Control/Monad/: FreshName.hs
src/Control/Monad/FreshName/: Class.hs
src/Data/: TaggedTree.hs
src/LambdaComp/: Binder.hs  Const.hs  Driver.hs  FreshName.hs  Ident.hs  Optimizations.hs  Parser.hs  PrimOp.hs  Syntax.hs  ToCBPV.hs  TypeCheck.hs
src/LambdaComp/AM/: Eval.hs  Syntax.hs
src/LambdaComp/ANF/: Syntax.hs
src/LambdaComp/CBPV/: ArityAnalysis.hs  BindingConversion.hs  LocalOptimization.hs  Optimization.hs  PrettyPrinter.hs  SkipReturn.hs  Syntax.hs  ToAM.hs  ToC.hs  TypeCheck.hs  example.c
src/LambdaComp/CBPV/Optimization/: BetaReduction.hs  BindingConversion.hs  DeadBindingElimination.hs  EtaReduction.hs  IfConversion.hs  InlineBinding.hs  Local.hs  PrintConversion.hs  SkipReturn.hs
src/LambdaComp/CBV/: ToCBPV.hs
src/LambdaComp/Driver/: Argument.hs  Example.hs
src/LambdaComp/Elaborated/: Syntax.hs  TypeCheck.hs
src/LambdaComp/Elaborated/CBV/: ToCBPV.hs
src/LambdaComp/Elaborated/Optimization/: ConstantPropagation.hs  Local.hs
test/: Main.hs
test/golden/: Constant.lc.am.code.gen  Constant.lc.c.code.gen  Constant.lc.cbpv  Constant.lc.cbpv.opt  Constant.lc.code.gen.c  Constant.lc.execution.am.out  Constant.lc.execution.c.out  Constant.lc.opt.cbpv  Fib10.lc.am.code.gen  Fib10.lc.am.compile  Fib10.lc.am.execution  Fib10.lc.c.code.gen  Fib10.lc.cbpv  Fib10.lc.cbpv.opt  Fib10.lc.code.gen.am  Fib10.lc.code.gen.c  Fib10.lc.execution.c.out  Fib10.lc.opt.cbpv  Fib100.lc.cbpv  Fib100.lc.code.gen.am  Fib100.lc.code.gen.c  Fib100.lc.execution.am.out  Fib100.lc.execution.c.out  Fib100.lc.opt.cbpv  HugeRec.lc.am.code.gen  HugeRec.lc.am.compile  HugeRec.lc.c.code.gen  HugeRec.lc.c.execution  HugeRec.lc.cbpv  HugeRec.lc.cbpv.opt  HugeRec.lc.code.gen.am  HugeRec.lc.code.gen.c  HugeRec.lc.opt.cbpv  IfFun.lc.cbpv  IfFun.lc.code.gen.am  IfFun.lc.code.gen.c  IfFun.lc.execution.am.out  IfFun.lc.opt.cbpv  InfiniteRec.lc.am.compile  InfiniteRec.lc.am.execution  (+68 more)
