cabal-version:   3.4
name:            lambdacomp

-- The package version.
-- See the Haskell package versioning policy (PVP) for standards
-- guiding when and how versions should be incremented.
-- https://pvp.haskell.org
-- PVP summary:     +-+------- breaking API changes
--                  | | +----- non-breaking API additions
--                  | | | +--- code changes with no API change
version:         0.1.0.0
synopsis:        An educational compiler for lambda calculus using CBPV

-- description:
license:         BSD-3-Clause
license-file:    LICENSE
author:          Junyoung/"Clare" Jang
maintainer:      jjc9310@gmail.com

-- A copyright notice.
-- copyright:
category:
  Language
  , Compiler

build-type:      Simple
extra-doc-files:
  CHANGELOG.md
  README.md

-- Extra source files to be distributed with the package, such as examples, or a tutorial module.
-- extra-source-files:

common warnings
  ghc-options: -Wall

common extensions
  default-extensions:
    DerivingStrategies
    ImportQualifiedPost

library
  import:
    , warnings
    , extensions

  -- Modules exported by the library.
  exposed-modules:
    LambdaComp.AM.Syntax
    LambdaComp.AM.Eval
    LambdaComp.CBPV.BindingConversion
    LambdaComp.CBPV.Optimization
    LambdaComp.CBPV.SkipReturn
    LambdaComp.CBPV.Syntax
    LambdaComp.CBPV.ToAM
    LambdaComp.CBPV.ToC
    LambdaComp.CBPV.TypeCheck
    LambdaComp.FreshName
    LambdaComp.Ident
    LambdaComp.Syntax
    LambdaComp.ToCBPV
    LambdaComp.TypeCheck

  -- Modules included in this library but not exported.
  -- other-modules:

  -- Other library packages from which modules are imported.
  build-depends:
    , array       ^>=0.5.4.0
    , base        >=4.16.4.0
    , containers  ^>=0.7
    , mtl         ^>=2.3.1

  -- Directories containing source files.
  hs-source-dirs:   src

  -- Base language which the package is written in.
  default-language: GHC2021

executable lambdacomp
  import:
    , warnings
    , extensions

  -- .hs or .lhs file containing the Main module.
  main-is:          Main.hs

  -- Modules included in this executable, other than Main.
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:

  -- Other library packages from which modules are imported.
  build-depends:
    , base        ^>=4.16.4.0
    , lambdacomp

  -- Directories containing source files.
  hs-source-dirs:   exe

  -- Base language which the package is written in.
  default-language: GHC2021

test-suite lambdacomp-test
  import:
    warnings
    , extensions

  -- Base language which the package is written in.
  default-language: GHC2021

  -- Modules included in this executable, other than Main.
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:

  -- The interface type and version of the test suite.
  type:             exitcode-stdio-1.0

  -- Directories containing source files.
  hs-source-dirs:   test

  -- The entrypoint to the test suite.
  main-is:          Main.hs

  -- Test dependencies.
  build-depends:
    , base        ^>=4.17.2.1
    , lambdacomp
