cabal-version:   3.8
name:            lambdacomp

-- The package version.
-- See the Haskell package versioning policy (PVP) for standards
-- guiding when and how versions should be incremented.
-- https://pvp.haskell.org
-- PVP summary:     +-+------- breaking API changes
--                  | | +----- non-breaking API additions
--                  | | | +--- code changes with no API change
version:         0.1.0.0
build-type:      Simple
license:         BSD-3-Clause
license-files:   LICENSE

-- A copyright notice.
-- copyright:

author:          Junyoung/"Clare" Jang
maintainer:      jjc9310@gmail.com
synopsis:        A primitive compiler for λ-calculus + α using CBPV
description:
  See [README.md](https://github.com/Ailrun/lambdacomp/blob/master/README.md)

category:
  Language
  , Compiler

tested-with:     GHC ==9.8.4
data-files:      data/runtime.h

-- Extra source files to be distributed with the package, such as examples, or a tutorial module.
-- extra-source-files:

extra-doc-files:
  CHANGELOG.md
  README.md

common extensions
  default-extensions:
    DerivingStrategies
    ImportQualifiedPost

common warnings
  ghc-options: -Wall

library
  import:
    , extensions
    , warnings

  -- Modules exported by the library.
  exposed-modules:
    LambdaComp.AM.Eval
    LambdaComp.AM.Syntax
    LambdaComp.CBPV.BindingConversion
    LambdaComp.CBPV.Optimization
    LambdaComp.CBPV.SkipReturn
    LambdaComp.CBPV.Syntax
    LambdaComp.CBPV.ToAM
    LambdaComp.CBPV.ToC
    LambdaComp.CBPV.TypeCheck
    LambdaComp.CBV.ToCBPV
    LambdaComp.Driver
    LambdaComp.Driver.Argument
    LambdaComp.FreshName
    LambdaComp.Ident
    LambdaComp.Syntax
    LambdaComp.TypeCheck

  -- Other library packages from which modules are imported.
  build-depends:
    , base                  ^>=4.19.2.0
    , containers            ^>=0.8
    , directory             ^>=1.3.9.0
    , filepath              ^>=1.5.4.0
    , mtl                   ^>=2.3.1
    , optparse-applicative  ^>=0.18.1.0
    , process               ^>=1.6.25.0
    , temporary             ^>=1.3
    , text                  ^>=2.1.2
    , vector                ^>=0.13.2.0

  -- Modules included in this library but not exported.
  other-modules:    Paths_lambdacomp

  -- Directories containing source files.
  hs-source-dirs:   src

  -- Base language which the package is written in.
  default-language: GHC2021
  autogen-modules:  Paths_lambdacomp

executable lambdacomp
  import:
    , extensions
    , warnings

  -- .hs or .lhs file containing the Main module.
  main-is:          Main.hs

  -- Other library packages from which modules are imported.
  build-depends:
    , base        ^>=4.19.2.0
    , lambdacomp

  -- Modules included in this executable, other than Main.
  -- other-modules:

  -- Directories containing source files.
  hs-source-dirs:   exe

  -- Base language which the package is written in.
  default-language: GHC2021

test-suite lambdacomp-test
  import:
    , extensions
    , warnings

  -- The interface type and version of the test suite.
  type:             exitcode-stdio-1.0

  -- The entrypoint to the test suite.
  main-is:          Main.hs

  -- Test dependencies.
  build-depends:
    , base        ^>=4.19.2.0
    , lambdacomp

  -- Modules included in this executable, other than Main.
  -- other-modules:

  -- Directories containing source files.
  hs-source-dirs:   test

  -- Base language which the package is written in.
  default-language: GHC2021

source-repository head
  type:     git
  location: https://github.com/Ailrun/lambdacomp.git
  branch:   master
